--- a/designer/quizgen.ui
+++ b/designer/quizgen.ui
@@ -13,39 +13,29 @@
   <property name="windowTitle">
    <string>Generate Quiz</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>40</x>
      <y>20</y>
-     <width>294</width>
-     <height>181</height>
+     <width>327</width>
+     <height>194</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
      <layout class="QGridLayout" name="gridLayout_4">
-      <item row="3" column="2">
+      <item row="4" column="2">
        <widget class="QSpinBox" name="newQuestions"/>
       </item>
-      <item row="3" column="3">
+      <item row="4" column="3">
        <widget class="QLabel" name="newDisplay">
         <property name="text">
          <string>(15 available)</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="classLabel">
-        <property name="text">
-         <string>Class</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" colspan="2">
+      <item row="4" column="0" colspan="2">
        <widget class="QLabel" name="label_2">
         <property name="minimumSize">
          <size>
@@ -61,7 +51,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0" colspan="2">
+      <item row="3" column="0" colspan="2">
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Review questions</string>
@@ -71,7 +61,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="3" column="2">
        <widget class="QSpinBox" name="revQuestions">
         <property name="minimumSize">
          <size>
@@ -90,7 +80,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="3">
+      <item row="3" column="3">
        <widget class="QLabel" name="reviewDisplay">
         <property name="text">
          <string>(5 sets due)</string>
@@ -98,9 +88,22 @@
        </widget>
       </item>
       <item row="0" column="1" colspan="3">
+       <widget class="QComboBox" name="classCombo"/>
+      </item>
+      <item row="2" column="1" colspan="3">
        <widget class="QComboBox" name="setCombo"/>
       </item>
       <item row="0" column="0">
+       <widget class="QLabel" name="classLabel">
+        <property name="text">
+         <string>Class</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
        <widget class="QLabel" name="setLabel">
         <property name="text">
          <string>New Set</string>
@@ -109,9 +112,6 @@
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
-      </item>
-      <item row="1" column="1" colspan="3">
-       <widget class="QComboBox" name="classCombo"/>
       </item>
      </layout>
     </item>
@@ -155,23 +155,16 @@
     </item>
    </layout>
   </widget>
-  <zorder>okButton</zorder>
-  <zorder>historyButton</zorder>
-  <zorder>cancelButton</zorder>
-  <zorder>okButton</zorder>
-  <zorder>label_2</zorder>
-  <zorder>newQuestions</zorder>
-  <zorder>newDisplay</zorder>
-  <zorder>reviewDisplay</zorder>
-  <zorder>label</zorder>
-  <zorder>revQuestions</zorder>
-  <zorder>label</zorder>
-  <zorder>reviewDisplay</zorder>
-  <zorder>revQuestions</zorder>
-  <zorder></zorder>
-  <zorder></zorder>
-  <zorder>verticalSpacer</zorder>
  </widget>
+ <tabstops>
+  <tabstop>classCombo</tabstop>
+  <tabstop>setCombo</tabstop>
+  <tabstop>revQuestions</tabstop>
+  <tabstop>newQuestions</tabstop>
+  <tabstop>okButton</tabstop>
+  <tabstop>cancelButton</tabstop>
+  <tabstop>historyButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
