--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -110,9 +110,6 @@ QGroupBox::title {
         </item>
        </layout>
       </widget>
-      <zorder>layoutWidget</zorder>
-      <zorder>groupBox_3</zorder>
-      <zorder>groupBox_3</zorder>
      </widget>
     </item>
     <item>
@@ -316,6 +313,19 @@ QGroupBox::title {
         </item>
        </layout>
       </widget>
+      <widget class="QPushButton" name="saveButton">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>490</y>
+         <width>111</width>
+         <height>27</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Save Changes</string>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -385,12 +395,13 @@ QGroupBox::title {
   <tabstop>answerD</tabstop>
   <tabstop>answerE</tabstop>
   <tabstop>correctAnswerCombo</tabstop>
+  <tabstop>saveButton</tabstop>
   <tabstop>questionList</tabstop>
   <tabstop>newButton</tabstop>
-  <tabstop>deleteButton</tabstop>
-  <tabstop>importButton</tabstop>
   <tabstop>moveUpButton</tabstop>
+  <tabstop>deleteButton</tabstop>
   <tabstop>moveDownButton</tabstop>
+  <tabstop>importButton</tabstop>
   <tabstop>exportButton</tabstop>
   <tabstop>jumpCombo</tabstop>
   <tabstop>closeButton</tabstop>
