--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -245,7 +245,7 @@ QGroupBox::title {
           <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
          </property>
          <item row="0" column="1">
-          <widget class="CorrectAnswersComboBox" name="correctAnswerCombo"/>
+          <widget class="QComboBox" name="correctAnswerCombo"/>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_2">
@@ -386,13 +386,6 @@ QGroupBox::title {
    </layout>
   </widget>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>CorrectAnswersComboBox</class>
-   <extends>QComboBox</extends>
-   <header>ui/editset.h</header>
-  </customwidget>
- </customwidgets>
  <tabstops>
   <tabstop>questionBox</tabstop>
   <tabstop>difficultySpinner</tabstop>
