--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -245,7 +245,7 @@ QGroupBox::title {
           <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
          </property>
          <item row="0" column="1">
-          <widget class="CorrectAnswersComboBox" name="correctAnswerCombo"/>
+          <widget class="QComboBox" name="correctAnswerCombo"/>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_2">
@@ -285,7 +285,7 @@ QGroupBox::title {
          </widget>
         </item>
         <item row="0" column="1" colspan="2">
-         <widget class="QPlainTextEdit" name="questionBox">
+         <widget class="AutosaveQPlainTextEdit" name="questionBox">
           <property name="tabChangesFocus">
            <bool>true</bool>
           </property>
@@ -388,8 +388,8 @@ QGroupBox::title {
  </widget>
  <customwidgets>
   <customwidget>
-   <class>CorrectAnswersComboBox</class>
-   <extends>QComboBox</extends>
+   <class>AutosaveQPlainTextEdit</class>
+   <extends>QPlainTextEdit</extends>
    <header>ui/editset.h</header>
   </customwidget>
  </customwidgets>
