--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -313,18 +313,31 @@ QGroupBox::title {
         </item>
        </layout>
       </widget>
-      <widget class="QPushButton" name="saveButton">
+      <widget class="QWidget" name="">
        <property name="geometry">
         <rect>
-         <x>110</x>
+         <x>50</x>
          <y>490</y>
-         <width>111</width>
-         <height>27</height>
+         <width>241</width>
+         <height>29</height>
         </rect>
        </property>
-       <property name="text">
-        <string>Save Changes</string>
-       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QPushButton" name="cancelButton">
+          <property name="text">
+           <string>Cancel New</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="saveButton">
+          <property name="text">
+           <string>Save Changes</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
@@ -402,7 +415,6 @@ QGroupBox::title {
   <tabstop>answerD</tabstop>
   <tabstop>answerE</tabstop>
   <tabstop>correctAnswerCombo</tabstop>
-  <tabstop>saveButton</tabstop>
   <tabstop>questionList</tabstop>
   <tabstop>newButton</tabstop>
   <tabstop>moveUpButton</tabstop>
