--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -313,27 +313,27 @@ QGroupBox::title {
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
-         <x>50</x>
+         <x>51</x>
          <y>490</y>
-         <width>241</width>
+         <width>250</width>
          <height>29</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
-         <widget class="QPushButton" name="cancelButton">
+         <widget class="QPushButton" name="saveButton">
           <property name="text">
-           <string>Cancel New</string>
+           <string>Save Changes</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="saveButton">
+         <widget class="QPushButton" name="cancelButton">
           <property name="text">
-           <string>Save Changes</string>
+           <string>Discard Changes</string>
           </property>
          </widget>
         </item>
