--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -285,7 +285,7 @@ QGroupBox::title {
          </widget>
         </item>
         <item row="0" column="1" colspan="2">
-         <widget class="AutosaveQPlainTextEdit" name="questionBox">
+         <widget class="QPlainTextEdit" name="questionBox">
           <property name="tabChangesFocus">
            <bool>true</bool>
           </property>
@@ -399,13 +399,6 @@ QGroupBox::title {
    </layout>
   </widget>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>AutosaveQPlainTextEdit</class>
-   <extends>QPlainTextEdit</extends>
-   <header>ui/editset.h</header>
-  </customwidget>
- </customwidgets>
  <tabstops>
   <tabstop>questionBox</tabstop>
   <tabstop>difficultySpinner</tabstop>
