add keyboard shortcuts to other dialogs; fix default property
The 'default' property controls what happens when you press Enter in the
dialog. For instance, in the Sets dialog, it was incorrectly set to Add,
so that when you highlighted something in the set list and pressed
Enter, it would bring up the add dialog.

--- a/designer/classes.ui
+++ b/designer/classes.ui
@@ -24,35 +24,39 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QListWidget" name="listWidget"/>
+     <widget class="QListWidget" name="listWidget">
+      <property name="toolTip">
+       <string>Press Alt-L to focus the list</string>
+      </property>
+     </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="addButton">
         <property name="text">
-         <string>Add</string>
+         <string>&amp;Add</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="renameButton">
         <property name="text">
-         <string>Rename</string>
+         <string>&amp;Rename</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="deleteButton">
         <property name="text">
-         <string>Delete</string>
+         <string>&amp;Delete</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="closeButton">
         <property name="text">
-         <string>Close</string>
+         <string>&amp;Close</string>
         </property>
        </widget>
       </item>
