--- a/designer/questionsets.ui
+++ b/designer/questionsets.ui
@@ -26,14 +26,14 @@
     <item row="4" column="1">
      <widget class="QPushButton" name="upButton">
       <property name="text">
-       <string>Move Up</string>
+       <string>Move &amp;Up</string>
       </property>
      </widget>
     </item>
     <item row="6" column="1">
      <widget class="QPushButton" name="closeButton">
       <property name="text">
-       <string>Close</string>
+       <string>&amp;Close</string>
       </property>
      </widget>
     </item>
@@ -51,40 +51,47 @@
      </spacer>
     </item>
     <item row="0" column="0" rowspan="8">
-     <widget class="QListWidget" name="setList"/>
+     <widget class="QListWidget" name="setList">
+      <property name="toolTip">
+       <string>Press Alt-L to focus the list</string>
+      </property>
+     </widget>
     </item>
     <item row="3" column="1">
      <widget class="QPushButton" name="deleteButton">
       <property name="text">
-       <string>Delete</string>
+       <string>&amp;Delete</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QPushButton" name="addButton">
       <property name="text">
-       <string>Add</string>
+       <string>&amp;Add</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QPushButton" name="editButton">
       <property name="text">
-       <string>Edit</string>
+       <string>&amp;Edit</string>
+      </property>
+      <property name="default">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
     <item row="5" column="1">
      <widget class="QPushButton" name="downButton">
       <property name="text">
-       <string>Move Down</string>
+       <string>Move &amp;Down</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <widget class="QPushButton" name="renameButton">
       <property name="text">
-       <string>Rename</string>
+       <string>&amp;Rename</string>
       </property>
      </widget>
     </item>
