--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -253,7 +253,10 @@ QGroupBox::title {
          <item row="0" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>Correct Answer</string>
+            <string>Correct &amp;Answer</string>
+           </property>
+           <property name="buddy">
+            <cstring>correctAnswerCombo</cstring>
            </property>
           </widget>
          </item>
