--- a/designer/qprev.ui
+++ b/designer/qprev.ui
@@ -47,15 +47,24 @@
       </item>
       <item>
        <widget class="QPushButton" name="okButton">
+        <property name="toolTip">
+         <string>Export this quiz to an RTF file and reschedule sets used in it.</string>
+        </property>
         <property name="text">
-         <string>OK</string>
+         <string>&amp;Accept Quiz</string>
+        </property>
+        <property name="default">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="cancelButton">
+        <property name="toolTip">
+         <string>Close this dialog without using this quiz.</string>
+        </property>
         <property name="text">
-         <string>Cancel</string>
+         <string>&amp;Return to Settings</string>
         </property>
        </widget>
       </item>
