--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -6,68 +6,52 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>409</width>
-    <height>333</height>
+    <width>278</width>
+    <height>112</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Main</string>
+   <string>Clicker Quiz Manager</string>
   </property>
   <property name="accessibleName">
    <string/>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="verticalLayoutWidget">
+   <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>110</y>
-      <width>160</width>
-      <height>95</height>
+      <x>20</x>
+      <y>20</y>
+      <width>241</width>
+      <height>71</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <property name="verticalSpacing">
+      <number>0</number>
+     </property>
+     <item row="0" column="0">
       <widget class="QPushButton" name="classesButton">
        <property name="text">
         <string>&amp;Classes</string>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="1" column="0">
       <widget class="QPushButton" name="setsButton">
        <property name="text">
         <string>&amp;Sets</string>
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QPushButton" name="historyButton">
-       <property name="text">
-        <string>&amp;History</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="verticalLayoutWidget_2">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>110</y>
-      <width>160</width>
-      <height>62</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <item>
+     <item row="0" column="1">
       <widget class="QPushButton" name="quizButton">
        <property name="text">
         <string>&amp;Generate Quiz</string>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="1" column="1">
       <widget class="QPushButton" name="quitButton">
        <property name="text">
         <string>&amp;Quit</string>
@@ -98,13 +82,6 @@
    </property>
   </action>
  </widget>
- <tabstops>
-  <tabstop>classesButton</tabstop>
-  <tabstop>setsButton</tabstop>
-  <tabstop>historyButton</tabstop>
-  <tabstop>quizButton</tabstop>
-  <tabstop>quitButton</tabstop>
- </tabstops>
  <resources/>
  <connections/>
 </ui>
