fix tab order in generate quiz dialog

--- a/designer/quizgen.ui
+++ b/designer/quizgen.ui
@@ -167,7 +167,9 @@
  </widget>
  <tabstops>
   <tabstop>classCombo</tabstop>
+  <tabstop>setList</tabstop>
   <tabstop>newSpin</tabstop>
+  <tabstop>revSpin</tabstop>
   <tabstop>genButton</tabstop>
   <tabstop>cancelButton</tabstop>
   <tabstop>setsButton</tabstop>
