--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>278</width>
-    <height>112</height>
+    <height>135</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,40 +23,73 @@
       <x>20</x>
       <y>20</y>
       <width>241</width>
-      <height>71</height>
+      <height>101</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <property name="verticalSpacing">
       <number>0</number>
      </property>
-     <item row="0" column="0">
+     <item row="3" column="0">
       <widget class="QPushButton" name="classesButton">
        <property name="text">
         <string>&amp;Classes</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="setsButton">
+     <item row="0" column="0" colspan="2">
+      <widget class="QLabel" name="verLabel">
        <property name="text">
-        <string>&amp;Sets</string>
+        <string>Clicker Quiz Manager Version 0</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
+     <item row="4" column="1">
+      <widget class="QPushButton" name="quitButton">
+       <property name="text">
+        <string>&amp;Quit</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
       <widget class="QPushButton" name="quizButton">
        <property name="text">
         <string>&amp;Generate Quiz</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="quitButton">
+     <item row="1" column="0" colspan="2">
+      <widget class="QLabel" name="dbLabel">
        <property name="text">
-        <string>&amp;Quit</string>
+        <string>Database: </string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QPushButton" name="setsButton">
+       <property name="text">
+        <string>&amp;Sets</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </widget>
