allow dragging and dropping to reorder questions
We could do the same for sets. Classes don't have an order, so
unnecessary.

--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -63,6 +63,9 @@ QGroupBox::title {
           <property name="toolTip">
            <string>Press Alt-L to focus the list</string>
           </property>
+          <property name="dragDropMode">
+           <enum>QAbstractItemView::InternalMove</enum>
+          </property>
          </widget>
         </item>
         <item>
