--- a/designer/questionsets.ui
+++ b/designer/questionsets.ui
@@ -55,6 +55,9 @@
       <property name="toolTip">
        <string>Press Alt-L to focus the list</string>
       </property>
+      <property name="dragDropMode">
+       <enum>QAbstractItemView::InternalMove</enum>
+      </property>
      </widget>
     </item>
     <item row="3" column="1">
